--- a/css/repeatercreeper.css
+++ b/css/repeatercreeper.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-    background-color: #101214;    
+    background-color: #101214;
     font-family: 'Roboto', sans-serif;
     height: 100%;
 }
@@ -61,11 +61,18 @@ header {
 
 .header {
     font-size: 3rem;
-    scroll-snap-type: y;
 }
 
 .subtitle {
     font-size: 2rem;
+}
+
+.hero-content {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    justify-content: center;
+    margin-bottom: 3rem;
 }
 
 .btn {
@@ -95,4 +102,173 @@ header {
 
 .btn-outline.orange-border {
     border-color: #EF9905;
+}
+
+.bg-img-container {
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    position: absolute;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url('/assets/background2.svg');
+    background-size: cover;
+}
+
+.soft-skills>div {
+    display: flex;
+}
+
+.soft-skills> :nth-child(even) {
+    flex-direction: row-reverse;
+}
+
+.skills-container.soft-skills {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 0 32px;
+}
+
+.skills-container.hard-skills {
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+}
+
+.skill-item {
+    display: flex;
+    flex-direction: column;
+    background-color: #464748;
+    border-radius: 32px;
+    flex: 1;
+    padding: 16px;
+    justify-content: center;
+    align-items: center;
+}
+
+.section {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.section-content {
+    margin: 64px 32px 32px 32px;
+    padding: 32px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.section-actions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section.hero {
+    width: 90%;
+    margin: auto;
+    flex-direction: row;
+}
+
+.title {
+    margin: 0;
+    font-size: 4rem
+}
+
+.subtitle {
+    margin: 0;
+    font-size: 2.5rem;
+    font-weight: 300;
+}
+
+.projects-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+}
+
+.project-item {
+    border-radius: 16px;
+    border: 2px solid rgb(69, 197, 18);
+}
+
+.project-container {
+    padding: 16px;
+    display: flex;
+}
+
+.project-container .project-header {
+    flex: 2;
+    flex-direction: column;
+    margin-right: 32px;
+}
+
+.project-container .project-header h1 {
+    margin: 0;
+}
+
+.project-container .project-action {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.project-container .project-action .btn-action {
+    border-radius: 32px;
+    padding: 8px 16px;
+    outline: none;
+    border: none;
+    background-color: #00FF19;
+    color: black;
+    font-weight: bold;
+    letter-spacing: 2pt;
+}
+
+.banner-header {
+    width: fit-content;
+    position: relative;
+    top: 32px;
+    background-color: #FF3939;
+    padding: 32px 64px;
+    color: white;
+}
+
+.banner-header.left {
+    border-top-right-radius: 32px;
+    border-bottom-right-radius: 32px;
+}
+
+.banner-header.right {
+    border-top-left-radius: 32px;
+    border-bottom-left-radius: 32px;
+    align-self: flex-end;
+}
+
+#about .section-content p {
+    text-align: justify;
+    font-size: 1.25rem;
+    letter-spacing: 2pt;
+    width: 50%;
+    margin: auto;
+}
+
+#about .section-content p:not(:first-of-type) {
+    margin: 1.5rem auto;
+}
+
+/**
+ * Hover Overrides
+ */
+.hvr-bounce-to-right.orange-border:before {
+    background: #EF9905;
+}
+
+.hvr-bounce-to-right.blue-border:before {
+    background: #F48EFF;
+}
+
+.hvr-bounce-to-right.pink-border:before {
+    background: #FF2081;
 }
