--- a/css/repeatercreeper.css
+++ b/css/repeatercreeper.css
@@ -23,7 +23,6 @@ header {
     display: flex;
     font-weight: 300;
     flex-flow: row wrap;
-    position: absolute
 }
 
 /* width */
@@ -149,6 +148,13 @@ header {
     color: white;
     margin: 0 16px;
     transition: 0.5s ease;
+}
+
+header .social-icon {
+    height: 32px;
+    width: 32px;
+    font-size: 1rem;
+    padding: 4px;
 }
 
 .social-icon.facebook:hover {
