--- a/css/repeatercreeper.css
+++ b/css/repeatercreeper.css
@@ -282,12 +282,24 @@ footer a.nav-link {
     border-color: #F48EFF;
 }
 
+.project-item.completed .project-action .btn-action {
+    background-color: #F48EFF;
+}
+
 .project-item.in-progress {
     border-color: rgb(69, 197, 18);
 }
 
+.project-item.in-progress .project-action .btn-action {
+    background-color: rgb(69, 197, 18);
+}
+
 .project-item.discontinued {
     border-color: #fc4444;
+}
+
+.project-item.discontinued .project-action .btn-action {
+    background-color: #fc4444;
 }
 
 .project-container {
@@ -316,7 +328,7 @@ footer a.nav-link {
     padding: 8px 16px;
     outline: none;
     border: none;
-    background-color: #00FF19;
+    /*background-color: #00FF19;*/
     color: black;
     font-weight: bold;
     letter-spacing: 2pt;
